baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Slash "/"
Slash "/"
Word "ROOT"
Word "NAMESPACE"
Error "—"
Word "defines"
Word "Config"
Comma ","
Word "Error"
Comma ","
Word "Status"
Comma ","
Word "ConfigAlias"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "IMPORTANT"
Colon ":"
Word "ns_llm"
Word "and"
Word "ns_auth"
Word "ALSO"
Word "define"
Word "types"
With "with"
Word "these"
Word "exact"
Slash "/"
Slash "/"
Word "same"
Word "names"
Dot "."
Word "Bare"
Word "references"
Word "here"
Word "must"
Word "resolve"
Word "to"
Word "the"
Word "ROOT"
Word "versions"
Dot "."
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Class "class"
Word "Config"
LBrace "{"
Word "key"
Word "string"
Word "env"
Word "string"
RBrace "}"
Class "class"
Word "Error"
LBrace "{"
Word "code"
Word "int"
Word "message"
Word "string"
RBrace "}"
Enum "enum"
Word "Status"
LBrace "{"
Word "Ok"
Word "Failed"
Word "Pending"
RBrace "}"
Word "type"
Word "ConfigAlias"
Equals "="
Word "Config"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Bare"
Word "name"
Word "usage"
Word "from"
Word "root"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Param"
Plus "+"
Return "return"
Word "types"
Colon ":"
Word "bare"
Word "Config"
Slash "/"
Word "Status"
Word "must"
Word "be"
Word "root"
Dot "."
Word "Config"
Slash "/"
Word "root"
Dot "."
Word "Status"
Function "function"
Word "RootIdentity"
LParen "("
Word "cfg"
Colon ":"
Word "Config"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "cfg"
RBrace "}"
Slash "/"
Slash "/"
Word "Constructor"
Colon ":"
Word "bare"
Word "Config"
Word "must"
Word "build"
Word "root"
Dot "."
Word "Config"
Function "function"
Word "RootConstruct"
LParen "("
Word "key"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "Config"
LBrace "{"
Word "key"
Colon ":"
Word "key"
Comma ","
Word "env"
Colon ":"
Quote "\""
Word "prod"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Enum"
Word "variant"
Colon ":"
Word "bare"
Word "Status"
Dot "."
Word "Ok"
Word "must"
Word "be"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Ok"
Function "function"
Word "RootEnumReturn"
LParen "("
RParen ")"
Arrow "->"
Word "Status"
LBrace "{"
Word "Status"
Dot "."
Word "Ok"
RBrace "}"
Slash "/"
Slash "/"
Word "Enum"
Match "match"
Colon ":"
Word "all"
Word "arms"
Word "must"
Word "resolve"
Word "to"
Word "root"
Dot "."
Word "Status"
Word "variants"
Function "function"
Word "RootEnumMatch"
LParen "("
Word "s"
Colon ":"
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "s"
RParen ")"
LBrace "{"
Word "Status"
Dot "."
Word "Ok"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "Status"
Dot "."
Word "Failed"
FatArrow "=>"
Quote "\""
Word "failed"
Quote "\""
Comma ","
Word "Status"
Dot "."
Word "Pending"
FatArrow "=>"
Quote "\""
Word "pending"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Colon ":"
Word "bare"
Word "ConfigAlias"
Word "must"
Word "be"
Word "root"
Dot "."
Word "ConfigAlias"
Equals "="
Word "root"
Dot "."
Word "Config"
Function "function"
Word "RootAliasParam"
LParen "("
Word "cfg"
Colon ":"
Word "ConfigAlias"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Word "Throw"
Class "class"
Colon ":"
Word "bare"
Word "Error"
Word "must"
Word "be"
Word "root"
Dot "."
Word "Error"
Function "function"
Word "RootThrowClass"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Error"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "500"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "root"
Word "error"
Quote "\""
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Throw"
Enum "enum"
Colon ":"
Word "bare"
Word "Status"
Dot "."
Word "Failed"
Word "must"
Word "be"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Failed"
Function "function"
Word "RootThrowEnum"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Status"
Dot "."
Word "Failed"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Word "from"
Word "root"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Reference"
Word "ns_llm"
Word "types"
LParen "("
Word "which"
Word "have"
Word "SAME"
Word "names"
Word "as"
Word "root"
Word "types"
RParen ")"
Function "function"
Word "RootUsesLlmConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "model"
RBrace "}"
Function "function"
Word "RootUsesLlmError"
LParen "("
Word "e"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Error"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "e"
Dot "."
Word "reason"
RBrace "}"
Function "function"
Word "RootUsesLlmStatus"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Ready"
RBrace "}"
Slash "/"
Slash "/"
Word "Reference"
Word "ns_auth"
Word "types"
Function "function"
Word "RootUsesAuthConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "provider"
RBrace "}"
Function "function"
Word "RootUsesAuthError"
LParen "("
Word "e"
Colon ":"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Error"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "e"
Dot "."
Word "realm"
RBrace "}"
Slash "/"
Slash "/"
Word "Reference"
Word "nested"
Word "ns_llm"
Dot "."
Word "openai"
Word "types"
Function "function"
Word "RootUsesNestedClient"
LParen "("
Word "c"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Client"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "c"
Dot "."
Word "api_key"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Mixed"
Colon ":"
Word "root"
Word "types"
Word "alongside"
Word "qualified"
Word "cross-ns"
Word "types"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Takes"
Word "root"
Dot "."
Word "Config"
Comma ","
Word "returns"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
Error "—"
Word "must"
Word "be"
Word "different"
Word "types"
Function "function"
Word "RootMixedConfigs"
LParen "("
Word "root_cfg"
Colon ":"
Word "Config"
Comma ","
Word "llm_cfg"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "root_cfg"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Stream"
Word "companion"
Word "types"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Classes"
Word "whose"
Word "fields"
Word "reference"
Word "cross-namespace"
Word "types"
Dot "."
Slash "/"
Slash "/"
Word "The"
Word "$stream"
Word "companions"
Word "must"
Word "resolve"
Word "all"
Word "field"
Word "types"
Word "correctly"
Dot "."
Slash "/"
Slash "/"
Word "Root"
Class "class"
With "with"
Word "fields"
Word "from"
Word "other"
Word "namespaces"
Class "class"
Word "RootWithCrossNsFields"
LBrace "{"
Word "own_config"
Word "Config"
Word "llm_config"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
Word "auth_config"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Config"
Word "llm_response"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Response"
Word "nested_client"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Client"
Word "own_status"
Word "Status"
Word "own_alias"
Word "ConfigAlias"
RBrace "}"
Slash "/"
Slash "/"
Word "Root"
Class "class"
Word "referencing"
Word "a"
Word "cross-namespace"
Word "type"
Word "alias"
Class "class"
Word "RootWithCrossNsAlias"
LBrace "{"
Word "llm_alias"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "ResponseAlias"
Word "own_alias"
Word "ConfigAlias"
RBrace "}"
