baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__01_lexer__ns_auth_auth.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Slash "/"
Slash "/"
Word "AUTH"
Word "NAMESPACE"
Error "—"
Word "defines"
Word "Config"
Comma ","
Word "Error"
Comma ","
Word "Role"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Config"
Word "and"
Word "Error"
Word "have"
Word "the"
Word "SAME"
Word "names"
Word "as"
Word "root"
Word "and"
Word "llm"
Word "types"
Dot "."
Slash "/"
Slash "/"
Word "Bare"
Word "references"
Word "here"
Word "must"
Word "resolve"
Word "to"
Word "the"
Word "AUTH"
Word "versions"
Dot "."
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Class "class"
Word "Config"
LBrace "{"
Word "provider"
Word "string"
Word "secret"
Word "string"
RBrace "}"
Class "class"
Word "Error"
LBrace "{"
Word "realm"
Word "string"
Word "expired"
Word "bool"
RBrace "}"
Enum "enum"
Word "Role"
LBrace "{"
Word "Admin"
Word "User"
Word "Guest"
RBrace "}"
Class "class"
Word "Token"
LBrace "{"
Word "value"
Word "string"
Word "role"
Word "Role"
RBrace "}"
Word "type"
Word "TokenAlias"
Equals "="
Word "Token"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Bare"
Word "name"
Word "usage"
LParen "("
Word "must"
Word "resolve"
Word "to"
Word "auth"
Dot "."
Star "*"
Word "NOT"
Word "root"
Dot "."
Star "*"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Bare"
Word "Config"
Word "param"
Colon ":"
Word "must"
Word "be"
Word "auth"
Dot "."
Word "Config"
LParen "("
Dot "."
Word "provider"
RParen ")"
Comma ","
Word "not"
Word "root"
LParen "("
Dot "."
Word "key"
RParen ")"
Word "or"
Word "llm"
LParen "("
Dot "."
Word "model"
RParen ")"
Function "function"
Word "AuthIdentity"
LParen "("
Word "cfg"
Colon ":"
Word "Config"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "cfg"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "constructor"
Colon ":"
Word "must"
Word "build"
Word "auth"
Dot "."
Word "Config"
Function "function"
Word "AuthConstruct"
LParen "("
Word "provider"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "Config"
LBrace "{"
Word "provider"
Colon ":"
Word "provider"
Comma ","
Word "secret"
Colon ":"
Quote "\""
Word "s3cret"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
Return "return"
Colon ":"
Word "must"
Word "be"
Word "auth"
Dot "."
Word "Role"
Dot "."
Word "Admin"
Function "function"
Word "AuthEnumReturn"
LParen "("
RParen ")"
Arrow "->"
Word "Role"
LBrace "{"
Word "Role"
Dot "."
Word "Admin"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
Match "match"
Colon ":"
Word "must"
Match "match"
Word "against"
Word "auth"
Dot "."
Word "Role"
Word "variants"
Function "function"
Word "AuthEnumMatch"
LParen "("
Word "r"
Colon ":"
Word "Role"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "r"
RParen ")"
LBrace "{"
Word "Role"
Dot "."
Word "Admin"
FatArrow "=>"
Quote "\""
Word "admin"
Quote "\""
Comma ","
Word "Role"
Dot "."
Word "User"
FatArrow "=>"
Quote "\""
Word "user"
Quote "\""
Comma ","
Word "Role"
Dot "."
Word "Guest"
FatArrow "=>"
Quote "\""
Word "guest"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "alias"
Colon ":"
Word "must"
Word "be"
Word "auth"
Dot "."
Word "TokenAlias"
Equals "="
Word "auth"
Dot "."
Word "Token"
Function "function"
Word "AuthAliasParam"
LParen "("
Word "t"
Colon ":"
Word "TokenAlias"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "t"
Dot "."
Word "value"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Class "class"
In "in"
Throw "throw"
Function "function"
Word "AuthThrowClass"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Error"
LBrace "{"
Word "realm"
Colon ":"
Quote "\""
Word "auth"
Word "failed"
Quote "\""
Comma ","
Word "expired"
Colon ":"
Word "true"
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
In "in"
Throw "throw"
Function "function"
Word "AuthThrowEnum"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Role"
Dot "."
Word "Guest"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Token"
Word "constructor"
With "with"
Word "nested"
Enum "enum"
Word "field"
Function "function"
Word "AuthMakeToken"
LParen "("
Word "v"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Token"
LBrace "{"
Word "Token"
LBrace "{"
Word "value"
Colon ":"
Word "v"
Comma ","
Word "role"
Colon ":"
Word "Role"
Dot "."
Word "User"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "root"
Dot "."
Word "X"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Function "function"
Word "AuthUsesRootConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "key"
RBrace "}"
Function "function"
Word "AuthUsesRootStatus"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "Status"
LBrace "{"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Pending"
RBrace "}"
Function "function"
Word "AuthMatchesRootStatus"
LParen "("
Word "s"
Colon ":"
Word "root"
Dot "."
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "s"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Ok"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Failed"
FatArrow "=>"
Quote "\""
Word "failed"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Pending"
FatArrow "=>"
Quote "\""
Word "pending"
Quote "\""
RBrace "}"
RBrace "}"
Function "function"
Word "AuthThrowsRootError"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "root"
Dot "."
Word "Error"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "403"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "forbidden"
Quote "\""
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "sibling"
LParen "("
Word "root"
Dot "."
Word "llm"
Dot "."
Word "X"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Function "function"
Word "AuthUsesLlmConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "model"
RBrace "}"
Function "function"
Word "AuthUsesLlmResponse"
LParen "("
Word "r"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Response"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "r"
Dot "."
Word "text"
RBrace "}"
Function "function"
Word "AuthUsesLlmStatus"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Ready"
RBrace "}"
Function "function"
Word "AuthMatchesLlmStatus"
LParen "("
Word "s"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "s"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Ready"
FatArrow "=>"
Quote "\""
Word "ready"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Generating"
FatArrow "=>"
Quote "\""
Word "generating"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Done"
FatArrow "=>"
Quote "\""
Word "done"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "nested"
LParen "("
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "X"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Function "function"
Word "AuthUsesNestedClient"
LParen "("
Word "c"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Client"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "c"
Dot "."
Word "api_key"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Mixed"
Colon ":"
Word "auth"
Plus "+"
Word "root"
Plus "+"
Word "llm"
Word "types"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Function "function"
Word "AuthMixedConfigs"
LParen "("
Word "auth_cfg"
Colon ":"
Word "Config"
Comma ","
Word "root_cfg"
Colon ":"
Word "root"
Dot "."
Word "Config"
Comma ","
Word "llm_cfg"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "auth_cfg"
Dot "."
Word "provider"
RBrace "}"
Slash "/"
Slash "/"
Word "auth"
Dot "."
Word "Error"
Plus "+"
Word "root"
Dot "."
Word "Error"
Plus "+"
Word "llm"
Dot "."
Word "Error"
Error "—"
Word "three"
Word "different"
Word "types"
Function "function"
Word "AuthMixedErrors"
LParen "("
Word "auth_err"
Colon ":"
Word "Error"
Comma ","
Word "root_err"
Colon ":"
Word "root"
Dot "."
Word "Error"
Comma ","
Word "llm_err"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Error"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "auth_err"
Dot "."
Word "realm"
RBrace "}"
