baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__01_lexer__ns_llm_models.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Slash "/"
Slash "/"
Word "LLM"
Word "NAMESPACE"
Error "—"
Word "defines"
Word "Config"
Comma ","
Word "Error"
Comma ","
Word "Status"
Comma ","
Word "ConfigAlias"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "These"
Word "have"
Word "the"
Word "SAME"
Word "names"
Word "as"
Word "root"
Word "types"
Dot "."
Word "Bare"
Word "references"
Word "here"
Slash "/"
Slash "/"
Word "must"
Word "resolve"
Word "to"
Word "the"
Word "LLM"
Word "versions"
Comma ","
Word "NOT"
Word "root"
Word "versions"
Dot "."
Slash "/"
Slash "/"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Error "═"
Class "class"
Word "Config"
LBrace "{"
Word "model"
Word "string"
Word "temperature"
Word "float"
RBrace "}"
Class "class"
Word "Error"
LBrace "{"
Word "reason"
Word "string"
Word "retryable"
Word "bool"
RBrace "}"
Enum "enum"
Word "Status"
LBrace "{"
Word "Ready"
Word "Generating"
Word "Done"
RBrace "}"
Enum "enum"
Word "Model"
LBrace "{"
Word "GPT4"
Word "Claude"
RBrace "}"
Class "class"
Word "Response"
LBrace "{"
Word "text"
Word "string"
Word "tokens"
Word "int"
RBrace "}"
Word "type"
Word "ConfigAlias"
Equals "="
Word "Config"
Word "type"
Word "ResponseAlias"
Equals "="
Word "Response"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Bare"
Word "name"
Word "usage"
LParen "("
Word "must"
Word "resolve"
Word "to"
Word "llm"
Dot "."
Star "*"
Word "NOT"
Word "root"
Dot "."
Star "*"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Bare"
Word "Config"
Word "param"
Colon ":"
Word "must"
Word "be"
Word "llm"
Dot "."
Word "Config"
LParen "("
Word "has"
Dot "."
Word "model"
RParen ")"
Comma ","
Word "not"
Word "root"
Dot "."
Word "Config"
LParen "("
Word "has"
Dot "."
Word "key"
RParen ")"
Function "function"
Word "LlmIdentity"
LParen "("
Word "cfg"
Colon ":"
Word "Config"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "cfg"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "constructor"
Colon ":"
Word "must"
Word "build"
Word "llm"
Dot "."
Word "Config"
Function "function"
Word "LlmConstruct"
LParen "("
Word "model"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Config"
LBrace "{"
Word "Config"
LBrace "{"
Word "model"
Colon ":"
Word "model"
Comma ","
Word "temperature"
Colon ":"
FloatLiteral "0.7"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
Return "return"
Colon ":"
Word "must"
Word "be"
Word "llm"
Dot "."
Word "Status"
Dot "."
Word "Ready"
Comma ","
Word "not"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Ok"
Function "function"
Word "LlmEnumReturn"
LParen "("
RParen ")"
Arrow "->"
Word "Status"
LBrace "{"
Word "Status"
Dot "."
Word "Ready"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
Match "match"
Colon ":"
Word "must"
Match "match"
Word "against"
Word "llm"
Dot "."
Word "Status"
Word "variants"
Function "function"
Word "LlmEnumMatch"
LParen "("
Word "s"
Colon ":"
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "s"
RParen ")"
LBrace "{"
Word "Status"
Dot "."
Word "Ready"
FatArrow "=>"
Quote "\""
Word "ready"
Quote "\""
Comma ","
Word "Status"
Dot "."
Word "Generating"
FatArrow "=>"
Quote "\""
Word "generating"
Quote "\""
Comma ","
Word "Status"
Dot "."
Word "Done"
FatArrow "=>"
Quote "\""
Word "done"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "alias"
Colon ":"
Word "must"
Word "be"
Word "llm"
Dot "."
Word "ConfigAlias"
Equals "="
Word "llm"
Dot "."
Word "Config"
Function "function"
Word "LlmAliasParam"
LParen "("
Word "cfg"
Colon ":"
Word "ConfigAlias"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "model"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Class "class"
In "in"
Throw "throw"
Function "function"
Word "LlmThrowClass"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Error"
LBrace "{"
Word "reason"
Colon ":"
Quote "\""
Word "llm"
Word "failed"
Quote "\""
Comma ","
Word "retryable"
Colon ":"
Word "true"
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Enum "enum"
In "in"
Throw "throw"
Function "function"
Word "LlmThrowEnum"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "Status"
Dot "."
Word "Done"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "constructor"
With "with"
Word "field"
Word "access"
Function "function"
Word "LlmResponseConstruct"
LParen "("
Word "text"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Response"
LBrace "{"
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Word "text"
Comma ","
Word "tokens"
Colon ":"
IntegerLiteral "42"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "root"
Dot "."
Word "X"
LParen "("
Word "must"
Word "get"
Word "root"
Word "types"
Comma ","
Word "not"
Word "llm"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "root"
Dot "."
Word "Config"
Word "has"
Dot "."
Word "key"
LParen "("
Word "not"
Dot "."
Word "model"
RParen ")"
Error "—"
Word "proves"
Word "it"
Error "'"
Word "s"
Word "root"
Dot "."
Word "Config"
Function "function"
Word "LlmUsesRootConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Word "root"
Dot "."
Word "Error"
Word "has"
Dot "."
Word "code"
LParen "("
Word "not"
Dot "."
Word "reason"
RParen ")"
Error "—"
Word "proves"
Word "it"
Error "'"
Word "s"
Word "root"
Dot "."
Word "Error"
Function "function"
Word "LlmUsesRootError"
LParen "("
Word "e"
Colon ":"
Word "root"
Dot "."
Word "Error"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "e"
Dot "."
Word "message"
RBrace "}"
Slash "/"
Slash "/"
Word "root"
Dot "."
Word "Status"
Word "has"
Word "Ok"
Slash "/"
Word "Failed"
Slash "/"
Word "Pending"
Comma ","
Word "not"
Word "Ready"
Slash "/"
Word "Generating"
Slash "/"
Word "Done"
Function "function"
Word "LlmUsesRootStatus"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "Status"
LBrace "{"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Ok"
RBrace "}"
Slash "/"
Slash "/"
Word "root"
Dot "."
Word "Status"
Match "match"
Error "—"
Word "must"
Match "match"
Word "root"
Word "variants"
Function "function"
Word "LlmMatchesRootStatus"
LParen "("
Word "s"
Colon ":"
Word "root"
Dot "."
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "s"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Ok"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Failed"
FatArrow "=>"
Quote "\""
Word "failed"
Quote "\""
Comma ","
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Pending"
FatArrow "=>"
Quote "\""
Word "pending"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "root"
Dot "."
Word "ConfigAlias"
Word "must"
Word "be"
Word "root"
Dot "."
Word "ConfigAlias"
Equals "="
Word "root"
Dot "."
Word "Config"
Function "function"
Word "LlmUsesRootAlias"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "ConfigAlias"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Word "Throw"
Word "root"
Dot "."
Word "Error"
Word "from"
Word "llm"
Word "namespace"
Function "function"
Word "LlmThrowsRootError"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "root"
Dot "."
Word "Error"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "404"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "not"
Word "found"
Quote "\""
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Throw"
Word "root"
Enum "enum"
Word "variant"
Function "function"
Word "LlmThrowsRootEnum"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "root"
Dot "."
Word "Status"
Dot "."
Word "Failed"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "sibling"
Word "namespace"
LParen "("
Word "root"
Dot "."
Word "auth"
Dot "."
Word "X"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Reference"
Word "ns_auth"
Dot "."
Word "Config"
LParen "("
Word "has"
Dot "."
Word "provider"
RParen ")"
Word "from"
Word "ns_llm"
Function "function"
Word "LlmUsesAuthConfig"
LParen "("
Word "cfg"
Colon ":"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "cfg"
Dot "."
Word "provider"
RBrace "}"
Slash "/"
Slash "/"
Word "Reference"
Word "ns_auth"
Dot "."
Word "Error"
LParen "("
Word "has"
Dot "."
Word "realm"
RParen ")"
Word "from"
Word "ns_llm"
Function "function"
Word "LlmUsesAuthError"
LParen "("
Word "e"
Colon ":"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Error"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "e"
Dot "."
Word "realm"
RBrace "}"
Slash "/"
Slash "/"
Word "Reference"
Word "ns_auth"
Dot "."
Word "Role"
Enum "enum"
Word "from"
Word "ns_llm"
Function "function"
Word "LlmUsesAuthRole"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Role"
LBrace "{"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Role"
Dot "."
Word "Admin"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Cross-namespace"
Colon ":"
Word "child"
Word "namespace"
LParen "("
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "X"
RParen ")"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Reference"
Word "nested"
Word "openai"
Dot "."
Word "Client"
Word "from"
Word "parent"
Word "llm"
Word "namespace"
Function "function"
Word "LlmUsesNestedClient"
LParen "("
Word "c"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Client"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "c"
Dot "."
Word "api_key"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Mixed"
Colon ":"
Word "llm"
Word "types"
Plus "+"
Word "qualified"
Word "root"
Slash "/"
Word "auth"
Word "types"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "All"
Word "three"
Word "Configs"
In "in"
Word "one"
Word "signature"
Error "—"
Word "must"
Word "be"
Word "three"
Word "different"
Word "types"
Function "function"
Word "LlmMixedConfigs"
LParen "("
Word "llm_cfg"
Colon ":"
Word "Config"
Comma ","
Word "root_cfg"
Colon ":"
Word "root"
Dot "."
Word "Config"
Comma ","
Word "auth_cfg"
Colon ":"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Config"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "llm_cfg"
Dot "."
Word "model"
RBrace "}"
Slash "/"
Slash "/"
Error "─"
Error "─"
Word "Stream"
Word "companion"
Word "types"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Error "─"
Slash "/"
Slash "/"
Word "Classes"
With "with"
Word "cross-namespace"
Word "field"
Word "types"
Dot "."
Slash "/"
Slash "/"
Word "The"
Word "$stream"
Word "companions"
Word "must"
Word "resolve"
Word "all"
Word "field"
Word "types"
Comma ","
Word "including"
Slash "/"
Slash "/"
Word "types"
Word "from"
Word "root"
Word "and"
Word "sibling"
Word "namespaces"
Dot "."
Slash "/"
Slash "/"
Word "llm"
Class "class"
With "with"
Word "fields"
Word "from"
Word "root"
Word "and"
Word "sibling"
Word "namespaces"
Class "class"
Word "LlmWithCrossNsFields"
LBrace "{"
Word "own_config"
Word "Config"
Word "own_response"
Word "Response"
Word "root_config"
Word "root"
Dot "."
Word "Config"
Word "root_error"
Word "root"
Dot "."
Word "Error"
Word "auth_config"
Word "root"
Dot "."
Word "auth"
Dot "."
Word "Config"
Word "nested_client"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Client"
Word "own_status"
Word "Status"
Word "own_alias"
Word "ConfigAlias"
Word "root_alias"
Word "root"
Dot "."
Word "ConfigAlias"
RBrace "}"
Slash "/"
Slash "/"
Word "llm"
Class "class"
Word "referencing"
Word "root"
Word "type"
Word "alias"
LParen "("
Word "this"
Word "was"
Word "the"
Word "alias"
Word "stream"
Word "bug"
RParen ")"
Class "class"
Word "LlmWithRootAlias"
LBrace "{"
Word "root_alias"
Word "root"
Dot "."
Word "ConfigAlias"
Word "own_alias"
Word "ResponseAlias"
RBrace "}"
